--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,45 @@
 version: 2
 jobs:
-  build:
+  test:
     docker:
-      - image: debian:stretch
-
+      - image: hashicorp/terraform:light
     steps:
       - checkout
-
       - run:
-          name: Greeting
-          command: echo Hello, world.
-
+          name: Init terraform
+          command: terraform init
       - run:
-          name: Print the Current Time
-          command: date
-
+          name: Validate terraform
+          command: terraform validate
+      - run:
+          name: Plan terraform
+          command: terraform plan
+  deploy:
+    docker:
+      - image: hashicorp/terraform:light
+    steps:
+      - checkout
+      - run:
+          name: Init terraform
+          command: terraform init
+      - run:
+          name: Apply terraform
+          command: terraform apply -auto-approve
+workflows:
+  version: 2
+  test-and-deploy:
+    jobs:
+      - test
+      - hold:
+          type: approval
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
+      - deploy:
+          requires:
+            - hold
+          filters:
+            branches:
+              only: master
