--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Create credentials
+          command: chmod 744 create_credential.sh && ./create_credential.sh .terraformrc
+      - run:
           name: Init terraform
           command: terraform init
       - run:
@@ -19,6 +22,9 @@ jobs:
       - image: hashicorp/terraform:light
     steps:
       - checkout
+      - run:
+          name: Create credentials
+          command: chmod 744 create_credential.sh && ./create_credential.sh .terraformrc
       - run:
           name: Init terraform
           command: terraform init
