--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,11 @@ jobs:
           name: chmod
           command: chmod 744 create_credential.sh
       - run:
-          name: ls
-          command: ls -la
-      - run:
           name: Create credentials
           command: ./create_credential.sh .terraformrc
+      - run:
+          name: cat
+          command: cat .terraformrc
       - run:
           name: Init terraform
           command: terraform init
