--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: Create credential
-          command: sh create_credential.sh .terraformrc
+          command: sh .circleci/create_credential.sh .terraformrc
       - run:
           name: Init terraform
           command: terraform init
@@ -24,7 +24,7 @@ jobs:
       - checkout
       - run:
           name: Create credential
-          command: sh create_credential.sh .terraformrc
+          command: sh .circleci/create_credential.sh .terraformrc
       - run:
           name: Init terraform
           command: terraform init
